--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -233,7 +233,192 @@
          }
         
        }
-  
-
 
 }}
+
+
+.policy{
+    background-image: url(../assets/policy/bgpolicy.png); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+     height:30rem ;
+     padding: 6rem 0;
+     display: block;
+.row{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+}
+}
+    .policy-card{
+        :hover.round{
+            background-color: #ff4000;
+            cursor: pointer;
+        }
+        :hover,h2{
+            color: #ff4000;
+            cursor: pointer;
+        }
+        h2{
+            transition: all .3s ease;
+            font-weight: 700;
+            font-size: 1.6rem;
+            color: #fff;
+            text-transform: capitalize;
+            margin: 1.2rem 0 .5rem;
+        
+        }
+        p{
+            color: #dbdbdb;
+            font-style: italic;
+        }
+        .round{
+           padding: 2.3rem;
+           border-radius: 50%;
+           width: 8rem;
+           height: 8rem;
+           font-size: 3.4rem;
+           background-color: rgba(255, 255, 255, .2);
+           transition: all .3s ease;
+           margin: 0 auto;
+           position: relative;
+        .round-icon{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+}
+}       
+        
+    }
+    
+.policy-product{
+    padding: 6rem 0;
+    background: #eee;
+    display: block;
+.row{
+    display: flex;
+}
+}
+.policy-p-card{
+    background: #ffff;
+    padding: 20px;
+    border-radius: 5px;
+   border-bottom: 1px solid #a8a8a8;
+   position: relative;
+   top: -17px;
+h2{
+    text-transform: capitalize;
+    line-height: 2.4rem;
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin: 18px 0 10px;
+    cursor: pointer;
+    transition: all .3s ease;
+}
+h2:hover{
+    color: #ff4000;
+    cursor: pointer;
+}
+p{
+    color: #777;
+    line-height: 21px;
+    font-size: 14px;
+    transition: all .3s ease;
+    font-weight: 500;
+}
+   
+
+}
+
+.date{
+    position: absolute;
+    top: 0;
+    left: 30px;
+    z-index: 2;
+    background-color: #ff4000;
+    padding: 15px 10px;
+    text-align: center;
+    border-radius: 0 0 4px 4px;
+h3{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #fff;
+    display: block;
+    margin: 0;
+    padding: 0;
+ }
+h4{
+    color: #eee;
+    margin: 0;
+    padding: 0;
+    font-size: 14px;  
+} 
+}
+.policy-img{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+img{
+    width: 100%;
+    height: 100%;
+    transition: all .3s ease;
+}
+img:hover   
+{
+    transform: scale(1.2);   
+}
+}
+.read-more{
+    color: #fff;
+    padding: 14px 0;
+    display: block;
+    font-weight: 700;
+    background: #333;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 14px;
+    transition: all .3s ease;
+i{
+    margin-left: 4px;
+}
+}
+.read-more:hover{
+        background: #ff4000;
+        color: #fff;
+        
+ }
+.read-more:hover i{
+    margin-left: 6px;
+}
+
+
+
+.partners{
+    position: relative;
+.containers{
+.rows{
+    display: flex;
+    gap: 2rem;
+    position: absolute;
+    top: 22rem;
+img{
+    width: 15rem;
+    height: 8rem;
+    transition: all .3s ease;
+}
+img:hover{
+     box-shadow: 0 0 10px 1px #dbdbdb;
+ }     
+
+}
+}
+}
+
+
+
+
+
+
