--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -249,7 +249,7 @@
     display: grid;
     grid-template-columns: 33% 33% 33%;
 }
-}
+
     .policy-card{
         :hover.round{
             background-color: #ff4000;
@@ -297,10 +297,8 @@
     padding: 6rem 0;
     background: #eee;
     display: block;
-.row{
-    display: flex;
-}
-}
+   
+
 .policy-p-card{
     background: #ffff;
     padding: 20px;
@@ -393,19 +391,20 @@ i{
 .read-more:hover i{
     margin-left: 6px;
 }
+}
+}
+
 
 
 
 .partners{
+    
+.cont{
     position: relative;
-.containers{
-.rows{
-    display: flex;
-    gap: 2rem;
-    position: absolute;
-    top: 22rem;
+    bottom: -25rem;
+   
 img{
-    width: 15rem;
+    width: 16rem;
     height: 8rem;
     transition: all .3s ease;
 }
@@ -415,7 +414,249 @@ img:hover{
 
 }
 }
+.footer-top{
+    padding: 50px 0;
+    background-color: #111;
+    position: relative;
+    top: 30rem;
+img{
+    height: 3rem;
 }
+.row{
+    display: grid;
+    grid-template-columns: 40% 20% 20% 20%;
+   }
+.footer-logo{
+    margin-left: 2rem;
+}
+    
+.footer-top-menu{
+    margin-left: 2rem;
+ ul{
+    padding: 0;
+    margin: 0;
+ li{
+     list-style-type: none;
+     margin-top: 2rem;
+     color: #fff;
+    a img{
+       width: 20rem;
+       height: 3.5rem;
+      
+    }
+ 
+.heading{
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 500;
+   
+}
+.address{
+    font-size: 1.5rem;
+    color: #ccc;
+    padding-left: 10px;
+}
+.email a {
+    padding-left: 10px;
+    text-decoration: underline;
+    color: #ccc;
+    font-size: 15px;
+    transition: .3s all ease;
+:hover{
+    color: #ff4000;
+}
+}
+.number a{
+    color: #ff4000;
+    font: size 20px; 
+    font-weight: 700;
+    padding-left: 10px;
+    text-decoration: none;
+    
+}
+i{
+    margin-right: 1rem;
+    font-size: 1.7rem;
+ }
+ }
+}
+}
+.footer-all-menu{
+ ul li:hover i{
+        color: #ff4000;
+        
+    }
+ 
+ h2{
+     color: #ff4000;
+     font-weight: 600;
+     font-size: 16px;
+     text-transform: uppercase;
+     position: relative;
+     margin: 0;
+ }
+   h2::before{
+        position: absolute;
+        content: '';
+        width: 60px;
+        height: 2px;
+        background: #dbdbdbdb;
+        opacity: .1;
+        bottom: -10px;
+        left: 0;
+        
+    }
+
+ul{
+    padding: 0;
+    margin-top: 30px 0 0 0;
+li{
+    list-style-type: none;
+    margin-top: 8px;
+
+a{
+    text-decoration: none;
+    font-weight:400;
+    text-decoration: none;
+    color: #666;
+    font-size: 15px;
+    transition: all .3s ease;   
+}
+i{
+    font-size: 7px;
+    margin: -2px 10px 0 0;
+   
+}
+
+a:hover {
+    color: #ff4000;
+    margin-left: 10px;
+}
+
+
+
+}
+}
+ }
+
+}
+.footer-middle{
+    padding: 50px 0;
+    background: #1d1d1d;
+    position: relative;
+    bottom: -28rem;
+    
+.row{
+    display: grid;
+    grid-template-columns: 30% 35% 30%;
+}
+h2{
+    font-size: 20px;
+    color: #fff;
+    font-weight: 700;
+}
+  .input{
+      border: 0;
+      outline: 0;
+      color: #ccc;
+      background: #111;
+      padding: 0 16px;
+      margin: 0;
+      min-width: 360px;
+      height: 45px;
+      font-size: 14px;
+      font-style: italic;
+      border-radius: 20px 0 0 20px;
+      position: relative;
+  }
+  .btn{
+   color: #fff;
+   background-color: #111;
+   padding: 0 25px;
+   border-radius:0 20px 20px 0;
+   height: 45px;
+   border: none;
+   outline: 0;
+   transition:all .3s ease ;
+  
+}
+  .btn:active, .btn:focus{
+      border: 0 !important;
+      outline: 0 !important;
+      box-shadow: none !important;
+     }
+  .btn:hover i{
+      color: #ff4000;
+  }
+  .social{
+      ul li a:hover{
+          background: #ff4000;
+          color: #fff;
+      }
+    ul{
+        padding: 0;
+        margin: 0;
+    li{
+        position: relative;
+        display: inline-block;
+        margin-right: 5px;
+        list-style-type: none;
+    a{
+        width: 45px;
+        height: 45px;
+        background-color: rgba(255, 255, 255, .2);
+        border-radius: 50%;
+        display: inline-block;
+        font-size: 18px;
+        color: #c9c9c9;
+        transform: all .3s ease;
+    i{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+}
+}
+        
+    }
+      
+    } 
+      
+  }
+}
+footer{
+    position: relative;
+    bottom: -26rem;
+    padding: 20px 0;
+    background: #111;
+ p{
+       margin: 0;
+       padding: 0;
+       color: #ccc; 
+       text-align: center;
+   a{
+       color: #fff;
+       transition:all .3s ease ;
+       
+    }
+   a:hover{
+       text-decoration: none;
+       color: #ff4000;
+   }
+    }
+}
+
+
+
+ 
+
+
+
+
 
 
 
