banner and bestseller content
Signed-off-by: pratiga <gaitrisanu2468@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,83 @@
+<section class="banner">
+<owl-carousel-o [options] = "BannerOptions">
+<ng-template carouselSlide> <img src="../assets/banner/b2.jpg" alt="banner"></ng-template>
+<ng-template carouselSlide> <img src="../assets/banner/b3.jpg" alt="banner"></ng-template>
+<ng-template carouselSlide> <img src="../assets/banner/b4.jpg" alt="banner"></ng-template>
+<ng-template carouselSlide> <img src="../assets/banner/b5.jpg" alt="banner"></ng-template>
+</owl-carousel-o>
+
+</section>
+
+<section class="best-selling">
+  <div class="containers">
+  <div class="best-selling-container">
+    <div class="sale-price">
+    sale <strong>14%</strong>
+    </div>
+    <div class="selling-col-1">
+      <div class="selling-left">
+      <ul>
+        <li>
+        <span class="count-date">194</span>
+        <span class="count-day">Days</span>
+        
+        </li>
+        <li>
+          <span class="count-date">01</span>
+          <span class="count-day">Hours</span>
+          
+          </li>
+          <li>
+            <span class="count-date">22</span>
+            <span class="count-day">Mins</span>
+            
+            </li>
+          <li>
+            <span class="count-date">19</span>
+            <span class="count-day">Secs</span>
+            
+            </li>
+      </ul>
+      </div>
+    </div>
+    <div class="selling-col-2">
+      <div class="selling-img">
+      <img src="../assets/bestselling/bs.png" alt="best selling">
+      </div>
+    </div>
+    <div class="selling-col-3">
+      <div class="selling-heading">
+        <a href="javascript:void(0)"> Enim Pichana Enim</a>
+        <div class="selling-rating">
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+        </div>
+      </div>
+      <p>It is a long established fact that a reader 
+      will be distracted by the readable content of a page when looking at its layout.</p>
+        <h3>
+          <span class="selling-amount">$230.00</span>
+          <span class="selling-discount">$202</span>
+        </h3>
+        <div class="selling-button">
+          <a href="javascript:void(0)" class="cart-btn"><i class="fa fa-shopping"></i>Add To Cart</a>
+         <button  type="button" class="main-button">
+          <a href="javascript:void(0)"><i class="fa fa-heart"></i></a>
+          <a href="javascript:void(0)"><i class="fa fa-heart"></i></a>
+
+
+         </button>
+
+        </div>
+        
+    </div>
+    </div>
+    </div>
+</section>
+
 <section class="testimonial">
   <div class="containers">
   <owl-carousel-o [options]="TestimonialOptions" >
