--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,101 @@
     width: 90%;
     margin: 0 auto;
 }
+header{
+    background: #111;
+    color: #777;
+    padding: 15px 0;
+.row{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+}
+.language{
+    >ul{
+        padding: 0;
+        margin: 0;
+    >li{
+       list-style-type: none;
+       text-transform: uppercase;
+       font-size: 14px;
+       font-weight: 600;
+       cursor: pointer;
+       position: relative;
+       display: inline-block;
+       margin-right: 20px;
+       padding-right: 20px;
+       border-right: 1px solid rgb(226, 226, 226) ;
+        
+    }
+    }
+    ul li i{
+        margin-left: 4px;
+        font-size: 14px;
+    }
+    .dropdown{
+        background: rgb(244, 242, 242);
+        border: 1px solid rgb(226, 226, 226);
+        border-radius: 4px;
+        position: absolute;
+        z-index: 4;
+        padding-right: 20px;
+        padding-top: 10px;
+        width: 116px;
+        top: 36px;
+        text-align: start;
+        
+      
+        
+    ul li{
+        list-style-type: none;
+        border-bottom: 1px solid rgb(226, 226, 226);
+        padding: 4px 0;
+        border-radius: 4px;
+        transform: .3s all ease;
+        z-index: 4;
+}
+ul li:last-child(){
+    border-bottom: none;
+}
+ ul li:hover{
+    color: #ff4000;
+}
+}
+    
+}
+.social-menu{
+    ul{
+        margin: 0;
+        padding: 0;
+        li{
+            list-style-type: none;
+            display: inline-block;
+        a{
+            color: #777;
+            text-decoration: none;
+            transition: .3s all ease;
+            margin-left: 16px;
+        }
+        a:hover{
+            color: #ff4000;
+        }
+        .login{
+           background: #777;
+           padding: 5px 28px;
+           margin-left: 12px;
+           border-radius: 4px;
+           transform: .3s all ease;
+           color: #fff!important;
+        }
+        .login:hover{
+            background: #ff4000;
+        }
+        }
+    }
+}
+
+
 .banner img{
     height: 30rem;
     
@@ -82,7 +177,7 @@ li{
 }
 }
 .selling-col-3, .selling-col-2 {
-    width: 42%;
+    width: 90%;
     display: inline-block;
     vertical-align: middle;
 }
@@ -94,7 +189,7 @@ li{
 }
 
 .selling-heading{
-    margin-top: 4rem;
+    margin-top: 9rem;
     padding-bottom: 20px;
     border-bottom: 1px solid #dbdbdb;
  a{
@@ -167,6 +262,28 @@ i{
      background: #c30;
      color: #fff;
  }
+ .main-button{
+     border: none;
+     outline: none;
+     text-align: center;
+     padding: 11px 10px;
+     background: #000;
+     border-right: 1px solid rgb(73, 73, 73);
+    
+    a{
+        background: #000;
+        padding: 11px 10px;
+    }
+    a:last-child(){
+        border-right: none;
+    }
+    i{
+        color: #fff;
+    }
+    a:hover{
+        background: #ff4000;
+    }
+}
 }
 
 }
